--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ obj/
 .gradle/8.0/fileHashes/fileHashes.lock
 .gradle/buildOutputCleanup/buildOutputCleanup.lock
 .gradle/buildOutputCleanup/outputFiles.bin
+*.bin
+*.lock
